adjust font size and spacing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <p id="notifications" style="background-color:orange">[Warzone Initialised]</p>
     <!-- inputs -->
-    <form>
+    <form class="myform">
         <label for="owner">Change Owner: </label>
         <select name="ownerSelect" size="1" id="owner">
             <option value="dragon">Dragon</option>
