fix refreshing bug. Adjusted text size

--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
         <input type="number" max="100" id="wzp" value="50"></input>
         </form>
         <!--<input type="submit" value="Update Owner"></input>-->
+        <div id="buttonsDiv">
         <button id="change-owner">Update Owner</button>
         <button id="reset-wz">Reset Warzone</button>
+        </div>
     </form>
     
     <div id="mainDiv" class="grid-container">
         <!--the WZ will go in here-->
     </div>
     <div id="infoDiv">
-        <p id="infoP">zzzzzzz</p>
+        <p id="infoP">Click a sector to display the stronghold information here.</p>
     </div>
 </div>
     
