--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         - Evil King strongholds contain a large amount of wall defences.
     </p>
 
-    <p id="notifications" style="background-color:orange">[Warzone Initialised]</p>
+    <p id="notifications" style="background-color:orange;font-weight: bolder;text-align: center;">[Warzone Initialised]</p>
     <!-- inputs -->
     <form class="myform">
         <label for="owner">Change Owner: </label>
