style changes. Add hover effect to buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <p>This app can be used to simulate Stronghold spawns using the following rules:</br></br>
         - A Stronghold spawn is determined by the % of WarZone Points a faction owns. A higher % results in a stronger SH spawn.</br>
         - A Stronghold will determine sector ownership: own the SH to control the sector.</br>
-        - Evil King strongholds contain a large amount of wall defences.
+        - Evil King strongholds contain a large amount of wall defences.</br></br>
+
+        Click a sector to see its information displayed below.
     </p>
 
     <p id="notifications">[Warzone Initialised]</p>
